--- a/IdentityService/IdentityService.csproj
+++ b/IdentityService/IdentityService.csproj
@@ -27,10 +27,10 @@
         <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="7.1.0" />
         <PackageReference Include="OpenIddict.Quartz" Version="7.1.0" />
         <PackageReference Include="Quartz.Extensions.Hosting" Version="3.15.0" />
+        <PackageReference Include="Vite.AspNetCore" Version="2.4.1" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Business\Common\" />
       <Folder Include="DataAccess\DataSets\" />
       <Folder Include="wwwroot\" />
     </ItemGroup>
